# java-file-cache

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.gradle  settings.gradle  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/llc/berserkr/androidfilecache/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/llc/berserkr/androidfilecache/: FileCacheApplication.java  FlagsView.java  InputStreamToSizedBitmapConverter.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/resources/: berserkrlogger.properties
core/: build.gradle.kts
core/file-cache-temp/: file-writer-09595bcc-50e9-4547-beac-df1f9663fdea  segment
core/file-cache-temp/DiskLruCacheTest/: journal
core/src/test/java/compare/: CacheCompareTest.java  CacheLocksCompareTest.java
core/src/test/resources/: simplelogger.properties
core/test-files/data/dataa/: data
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle.kts
nativelib/src/main/cpp/: CMakeLists.txt  nativelib.cpp
nativelib/src/main/cpp/cache/: native_cache.cpp  native_cache.h  native_cache_locks.cpp  native_cache_locks.h
nativelib/src/main/cpp/tests/: NativeCacheLocksTest.cpp  NativeCacheTest.cpp
nativelib/src/test/cpp/: CMakeLists.txt
src/main/java/com/jakewharton/disklrucache/: StrictLineReader.java
src/main/java/llc/berserkr/cache/: AlwaysNullCache.java  BlobsSegmentedStreamingHashDataManager.java  BytesFileCache.java  BytesFileHashCache.java  Cache.java  CacheFactory.java  ExpiringCache.java  FifoCache.java  FileCache.java  FileHash.java  FileHashCache.java  FilePersistedExpiringCache.java  FilePersistedMaxCountCache.java  FilePersistedMaxSizeCache.java  FilePersistedMaxSizeStreamCache.java  FileStreamHashCache.java  HashDataManager.java  KeyConvertingCache.java  ListCache.java  MemoryCache.java  MemoryHashDataManager.java  Pair.java  SegmentedFile.java  SegmentedHashDataManager.java  SegmentedStreamingFile.java  SegmentedStreamingHashDataManager.java  SingleFileCache.java  SoftMemoryCache.java  StreamFileCache.java  StreamingFileHash.java  StreamsSegmentedStreamingHashDataManager.java  ValueConvertingCache.java
src/test/java/com/jakewharton/disklrucache/: DiskLruCache.java  DiskLruCacheTest.java  StrictLineReaderTest.java
src/test/java/compare/: CacheCompareTest.java
src/test/java/llc/berserkr/cache/: AlwaysNullCacheTest.java  ByteArrayIntConverterTest.java  ByteArrayIntegerConverterTest.java  ByteArrayLongConverterTest.java  BytesFileCacheTest.java  BytesFileHashTest.java  CacheLocksTest.java  CacheVaryingConfigurationTest.java  ExpiringCacheTest.java  FIFOByteFileBufferTest.java  FileHashCacheTest.java  FileHashTest.java  FilePersistedExpiringCacheTest.java  FilePersistedMaxCountCacheTest.java  FilePersistedMaxSizeCacheTest.java  FilePersistedMaxSizeStreamCacheTest.java  HashLocksTest.java  KeyConvertingCacheTest.java  ListCacheTest.java  LongStringConverter.java  MemoryCacheTest.java  SegmentedFileTest.java  SegmentedHashDataManagerTest.java  SoftMemoryCacheTest.java  StreamFileCacheTest.java
src/test/resources/: simplelogger.properties
(+125 files in other folders)
